--- a/index.html
+++ b/index.html
@@ -8,45 +8,37 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Our Organization</h1>
+        <h1>Bislett Kammerkor</h1>
         <nav>
-            <a href="#about">About</a>
-            <a href="#team">Team</a>
-            <a href="#contact">Contact</a>
+            <a href="#about">Om oss</a>
+            <a href="#contact">Kontaktinfo</a>
         </nav>
     </header>
     <main>
         <section id="about">
-            <h2>About Us</h2>
+            <h2>Om oss</h2>
             <p>
-                We are a small organization dedicated to making a positive impact in our community. 
-                Our mission is to support local initiatives and bring people together.
+Bislett Kammerkor har rundt 30 medlemmer i alderen 25 til 50 år. 
+                Vi er et sosialt og hyggelig kor, med tydelige musikalske ambisjoner. 
+                Koret består av et variert og spennende ensemble, med både erfarne og mindre erfarne sangere.
+
+Koret ble etablert i Vestre Frikirke i 1972 av musiker og komponist Sigvald Tveit, og het da Angelos Ungdomskor. 
+                De siste ti årene har koret gjennomgått store musikalske endringer, og har i dag en mer klassisk kirkemusikalsk profil, med innslag av folketoner.
+
+Koret er i dag en egen stiftelse, men har fortsatt tett samarbeid med Vestre Frikirke.
+
+Vi øver hver tirsdag i Vestre Frikirke på Bislett.
+
+Ta kontakt om du er interessert i å bli med i koret, leie de som innslag, eller har andre spørsmål.
             </p>
-        </section>
-        <section id="team">
-            <h2>Our Team</h2>
-            <ul class="team-list">
-                <li>
-                    <strong>Jane Doe</strong><br>
-                    Director
-                </li>
-                <li>
-                    <strong>John Smith</strong><br>
-                    Community Manager
-                </li>
-                <li>
-                    <strong>Emily Johnson</strong><br>
-                    Volunteer Coordinator
-                </li>
-            </ul>
-        </section>
+        
         <section id="contact">
-            <h2>Contact Us</h2>
-            <p>Email: <a href="mailto:info@organization.org">info@organization.org</a></p>
+            <h2>Kontaktingo</h2>
+            <p>Email: <a href="mailto:hallo@bislettkammerkor.no">hallo@bislettkammerkor.no</a></p>
         </section>
     </main>
     <footer>
-        &copy; 2025 Small Organization. All rights reserved.
+        &copy; 2025. Alle rettigheter - Bislett Kammerkor.
     </footer>
 </body>
 </html>
