--- a/index.html
+++ b/index.html
@@ -21,19 +21,20 @@
 Bislett Kammerkor har rundt 30 medlemmer i alderen 25 til 50 år. 
                 Vi er et sosialt og hyggelig kor, med tydelige musikalske ambisjoner. 
                 Koret består av et variert og spennende ensemble, med både erfarne og mindre erfarne sangere.
-
+<p>
 Koret ble etablert i Vestre Frikirke i 1972 av musiker og komponist Sigvald Tveit, og het da Angelos Ungdomskor. 
                 De siste ti årene har koret gjennomgått store musikalske endringer, og har i dag en mer klassisk kirkemusikalsk profil, med innslag av folketoner.
-
+<p>
 Koret er i dag en egen stiftelse, men har fortsatt tett samarbeid med Vestre Frikirke.
-
+<p>
 Vi øver hver tirsdag i Vestre Frikirke på Bislett.
-
+<p>
+                
 Ta kontakt om du er interessert i å bli med i koret, leie de som innslag, eller har andre spørsmål.
             </p>
         
         <section id="contact">
-            <h2>Kontaktingo</h2>
+            <h2>Kontaktinfo</h2>
             <p>Email: <a href="mailto:hallo@bislettkammerkor.no">hallo@bislettkammerkor.no</a></p>
         </section>
     </main>
