legg inn bilder, oppdatere nettside til enkelt forslag

--- a/index.html
+++ b/index.html
@@ -1,23 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta charset="UTF-8">
+<title>Bislett Kammerkor</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+<link rel="shortcut icon" href="assets/images/bkk-logo.png" type="image/x-icon">
+<style>
+body {font-family: "Lato", sans-serif}
+</style>
+<script src="https://www.w3schools.com/lib/w3.js"></script>
+<body>
+
+    <!-- Navigation (Stays on Top) -->
+<div class="w3-top w3-bar w3-white">
+    <a><img src="assets/images/bkk-logo-full.png" alt="Logo" style="width:15%"></a>
+    <div class="w3-right">
+    <a href="mailto:hallo@bislettkammerkor.no" class="w3-bar-item w3-button">Kontakt oss</a>
+</div></div>
+
+<img src="assets/images/bkk-jul-2024.png" alt="Julekonsert 2024" style="width:100%">
+
+<!-- About -->
+<div id="omoss" class="w3-container">
+<h1 class="w3-center">Hvem er vi?</h1>
+<p>
+Bislett Kammerkor har rundt 30 medlemmer i alderen 25 til 50 år. 
+    Vi er et sosialt og hyggelig kor, med tydelige musikalske ambisjoner. 
+    Koret består av et variert og spennende ensemble, med både erfarne og mindre erfarne sangere.
+    Vi øver hver tirsdag i Vestre Frikirke på Bislett.
+</p>
+<p>
+Koret ble etablert i Vestre Frikirke i 1972 av musiker og komponist Sigvald Tveit, og het da Angelos Ungdomskor. 
+    De siste ti årene har koret gjennomgått store musikalske endringer, og har i dag en mer klassisk kirkemusikalsk profil, med innslag av folketoner.
+    Koret er i dag en egen stiftelse, men har fortsatt tett samarbeid med Vestre Frikirke.
+</p>
+</div>
+
+
+
+<div id = "kontaktinfo" class="w3-cell-row">
+  <div class="w3-container w3-white w3-cell">
+    <h2> Mer info</h2>
+    <p>  Sjekk ut vår <a href="https://www.facebook.com/bislettkammerkor">Facebook</a> 
+        og <a href="https://www.instagram.com/bislettkammerkor/">Instagram</a> for mer info om våre aktiviteter og konserter. 
+    </p>
+  </div>
+
+  <div class="w3-container w3-white w3-cell" style="width: 65%">
+    <img src="assets/images/bkk-sommer-2025.jpg" alt="Julekonsert 2024" style="width:100%">
+  </div>
+
+</div>
+</body>
+</html>
+<!-- 
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-    <title>Bislett Kammerkor</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
 </head>
 <body>
-    <header>
-        <h1>Bislett Kammerkor</h1>
-        <nav>
-            <a href="#about">Om oss</a>
-            <a href="#contact">Kontaktinfo</a>
-        </nav>
-    </header>
-    <main>
-        <section id="about">
-            <h2>Om oss</h2>
+<div id="abc">
+    <nav>
+        <ul>
+            <li><a href="about.asp">Om oss</a></li>
+            <li><a href="concerts.asp">Konserter</a></li>
+            <li><a href="contact.asp">Kontakt oss</a></li>
+        </ul>
+    </nav>
+</div>
+<img src="assets/images/bkk-jul-2024.png" alt="Flowers in Chania">
+
 <p>
 Bislett Kammerkor har rundt 30 medlemmer i alderen 25 til 50 år. 
     Vi er et sosialt og hyggelig kor, med tydelige musikalske ambisjoner. 
@@ -42,4 +99,4 @@ Ta kontakt om du er interessert i å bli med i koret, leie de som innslag, eller
         &copy; 2025. Alle rettigheter - Bislett Kammerkor.
     </footer>
 </body>
-</html>
+</html> -->
